# rcfiles

./: .bashrc  .vimrc  README.md  _bashrc  _gdbinit  _gef.rc  _gitignore  _ideavimrc  _spacemacs  _vimrc  _xmodmaprc  _zshrc  change-user-dirs.dirs  chs_completion.sh  coc-settings.json  emacs_init.el  flake8.conf  install.sh  pylint.conf  pylint.rc  pythonrc.py  require.sh  setup.sh  terminator.config  tmux.conf  xtools.cmake
bash_pinyin_completion/: chs_completion.sh  chsdir
cheat_sheets/: Makefile  ascii_frequency  asm  bash  cmake  docker  emacs  gdb  gef  git  gnuplot  ipython  math  msf  numpy  org-mode  pwntools  pyplot  python  qmake  sage  sed  signal  spacemacs  system  tshark  typora  vc  vim
cmake/: CMakeLists.txt  FindIPP.cmake  Windeployqt.cmake  xtools.cmake
git_template/hooks/: post-commit
lisp/: sdcv-mode.el
vim_template/: py_header
